feat: price in calendar